--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,14 @@
     "@types/express": "^4.17.16",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.32.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.9.0"
   }
 }
