--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "envalid": "^7.3.1",
     "express": "^4.18.2",
     "mongoose": "^6.9.0"
   }
