--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -25,6 +26,7 @@
   "dependencies": {
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0"
   }
