--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^2.49.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
